package proyecto;

public class Bolsa {
    private int capacidad;
    private int cantidad;

    public Bolsa(){

    }

    public void llenar(){

    }

    public void vaciar(){

    }
}
