package proyecto;

import java.util.Map;

public class Mueble implements Dibujable{

    Map<String, String> tipoDeMueble;

    public Mueble(){

    }

    public void getTipoDeMueble(){
        
    }

    public void dibujar() {
        // TODO Auto-generated method stub
        
    }
    
}
