@startuml
scale 2
class Edificio
class Habitacion
class Aspiradora
class Suciedad
class Batería
class Gato
class Bolsa
class Objeto
class Celda
class Mueble
class Silla

Edificio *--> Habitacion

Habitacion *--> Celda : contiene
Habitacion *--> Aspiradora
Habitacion o--> Gato
Habitacion *--> Objeto

Celda o..> Suciedad

Aspiradora o--> Suciedad : elimina
Aspiradora *-u-> Bolsa : tiene
Aspiradora *-l-> Batería : tiene
Aspiradora ..> Celda

Gato o..> Suciedad : produce
Gato ..> Celda

Objeto <|-u- Mueble
Objeto <|-r- Silla
Objeto ..> Celda

@enduml